fix: remove overflow hidden from root

--- a/apps/100ms-custom-app/src/index.css
+++ b/apps/100ms-custom-app/src/index.css
@@ -13,11 +13,6 @@ body,
   left: 0;
   width: 100%;
   margin: 0;
-  overflow: hidden;
-}
-
-html {
-  overflow: hidden;
 }
 
 /* scroll bar */
